frontend/src/app/servers/styles.module.css
.container {
  padding: 24px;
}

.section {
  background-color: var(--color-white);
  border: 1px solid var(--color-stone-300);
  padding: 24px;
  margin: 20px 0;
}

.status {
  font-weight: 600;
  &::before {
    content: "";
    margin-bottom: 1px;
    display: inline-block;
    border-width: 5px;
    border-style: solid;
    border-radius: 99px;
    margin-right: 5px;
  }
}

.logs {
  display: block;
  height: 65vh;
  margin-top: 20px;
  padding: 5px;
  border: 1px solid var(--color-stone-300);
  white-space: pre;
  overflow: auto;
}

.noServers a {
  font-weight: 600;
}
.noServers p {
  margin: 20px 0;
}

.actions Button {
  display: inline;
  margin-right: 10px;
}

.actions div {
  margin-top: 30px;
  width: 100%;
  text-align: center;
}

.error {
  color: var(--color-error);
  margin-bottom: 10px;
}

